tests/baselines/reference/classWithPrivateProperty.errors.txt
==== tests/cases/compiler/classWithPrivateProperty.ts (8 errors) ====
    // accessing any private outside the class is an error
    
    class C {
        private x;
        private a = '';
        private b: string = '';
        private c() { return '' }
        private d = () => '';
        private static e;
        private static f() { return '' }
        private static g = () => '';
    }
    
    var c = new C();
    var r1: string = c.x;
                       ~
!!! error TS2107: 'C.x' is inaccessible.
    var r2: string = c.a;
                       ~
!!! error TS2107: 'C.a' is inaccessible.
    var r3: string = c.b;
                       ~
!!! error TS2107: 'C.b' is inaccessible.
    var r4: string = c.c();
                       ~
!!! error TS2107: 'C.c' is inaccessible.
    var r5: string = c.d();
                       ~
!!! error TS2107: 'C.d' is inaccessible.
    var r6: string = C.e;
                       ~
!!! error TS2107: 'C.e' is inaccessible.
    var r7: string = C.f();
                       ~
!!! error TS2107: 'C.f' is inaccessible.
    var r8: string = C.g();
                       ~
!!! error TS2107: 'C.g' is inaccessible.